[package]
name = "reth-mdbx-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
license = "Apache-2.0"
description = "Rust bindings for libmdbx with good licence."

[lib]
name = "reth_mdbx_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
## temp pin <https://github.com/rust-lang/cc-rs/issues/963>
cc = "=1.0.83"
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
